# cmake-samples

./: CMakeLists.txt  README.md  foo.cpp  main.cpp
includes/: shape.h
lib/: CMakeLists.txt  shape.cpp
